--- a/CSS/index.css
+++ b/CSS/index.css
@@ -42,3 +42,70 @@
     transition: 0.5s ease;
     opacity: 1;
 }
+
+/* Language: css */
+/* Path: CSS\index.css */
+/* Compare this snippet from CSS\styles.css: */
+/* .icon{      
+ */
+/*     float: right;  
+ */
+/* }
+ */
+/* .heading{
+ */
+/*     font-size: 50px;
+ */
+/*     font-weight: bold;
+ */
+/*     text-align: center;
+ */
+    
+/*     font-family: 'Oswald', sans-serif;    
+ */
+/* }
+ */
+/* 
+ */
+/* h2 {
+ */
+/*     border-bottom: 3px solid black;
+ */
+/*     display: inline-block;
+ */
+/*     margin-left: 150px;   
+ */
+/* }
+ */
+/* 
+ */
+
+/* .page-header {
+ */
+
+/*     margin-top: 20px;
+ */
+
+/*     margin-left: -55px;
+ */
+    
+/* }
+ */
+
+    
+
+/* .guide {
+ */
+    
+
+/*     padding-top: 50px;
+ */
+
+/* }
+ */
+
+
+/* .nav-bar-full{
+ */
+    
+ 
