--- a/assets/css/animate.css
+++ b/assets/css/animate.css
@@ -2742,3 +2742,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
   -webkit-animation-name: rollOut;
   animation-name: rollOut;
 }
+
+/* originally authored by Nick Pettit -
+
+
