--- a/assets/css/magnific-popup.css
+++ b/assets/css/magnific-popup.css
@@ -349,3 +349,8 @@ img.mfp-img {
   .mfp-container {
     padding-left: 6px;
     padding-right: 6px; } }
+
+
+/*# sourceMappingURL=magnific-popup.css.map */
+
+/*# sourceMappingURL=magnific-popup.css.map */
