--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -9898,6 +9898,8 @@ a.text-danger:hover, a.text-danger:focus {
 
 .text-light {
   color: #f8f9fa !important;
+  font-size: x-large;
+  font-weight: bolder;
 }
 
 a.text-light:hover, a.text-light:focus {
