NavBar UI improved
Closes #447
1> Improved UI of NavBar
2> FIxed hacktoberfest button in Mobile view

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -232,6 +232,9 @@ left: 30px; */
     bottom: 20px;
     right: 20px;
   }
+   #hacktoberfest{
+    min-width: fit-content;
+  }
 }
 
 @media (min-width: 151px) and (max-width: 350px) {
