--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -611,10 +611,6 @@ hr {
   border-color: var(--primary) !important;
 }
 
-.top-nav-collapse .navbar-nav .nav-link:hover {
-  color: var(--primary) !important;
-}
-
 .navbar-expand-md .navbar-toggler {
   background: transparent;
   border: 1px solid var(--primary);
@@ -697,6 +693,7 @@ hr {
   width: 100%;
 }
 
+
 .navbar-expand-md .navbar-nav .nav-link:hover,
 .navbar-expand-md .navbar-nav .nav-link:hover::before,
 .navbar-expand-md .navbar-nav .nav-link:focus {
@@ -706,6 +703,28 @@ hr {
   -webkit-transition: width 1s;
   -ms-transition: width 1s;
 }
+
+.hover-ride:hover{
+    color:var(--primary)!important;
+}
+
+
+
+
+#joinus:hover{
+  background-color: var(--primary) !important;
+  color: white !important;
+  border-radius: 2rem !important;
+  transition:0.2s;
+}
+
+#hacktoberfest:hover{
+  background-color: var(--primary) !important;
+  color: white !important;
+  border-radius: 2rem !important;
+  transition:0.2s;
+}
+
 
 .navbar {
   padding: 10px 0;
@@ -1685,7 +1704,6 @@ button.accordionFAQs i.slide-down {
 button.accordionFAQs i.slidedown.slide-top {
   transform: rotate(-180deg);
   color: #fa5019;
-yellowTheme
 }
 .accordionFAQs:hover {
   background-color: #fff2b2;
