changing style.css

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -3,6 +3,7 @@
 }
 .heading{
     font-size: 50px;
+    text-shadow: 1px 1px 2px red;
     font-weight: bold;
     text-align: center;
     font-family: 'Oswald', sans-serif;    
