Updated box hover effect on all .services-item
I updated the box hover problem now it will show all box hover with oranges box shadow
Plz merge my changes with your file

--- a/assets/css/hacktoberfest.css
+++ b/assets/css/hacktoberfest.css
@@ -129,4 +129,8 @@
   /* .project_card_img {
       object-fit: contain !important;
     } */
+  .services-item:hover
+  {
+  box-shadow: 0 0 12px #ffd100;
+  }
 }
