I update the blog section
i change the box shadow spread value now it will not spread too much and also defined the transform scale to 1.5
Plz merge my file with yours

--- a/assets/css/hacktoberfest.css
+++ b/assets/css/hacktoberfest.css
@@ -129,4 +129,8 @@
   /* .project_card_img {
       object-fit: contain !important;
     } */
+  .blog:hover{
+          box-shadow: 0 4px 8px 0 #f7b801;
+          transform: scale(1.5);
+  }
 }
