I changed the selection method
Now it will not look odd when selecting something it will give a good combination of black and   #f7b801 to match the site design
plz merge my file with yours

--- a/assets/css/hacktoberfest.css
+++ b/assets/css/hacktoberfest.css
@@ -2,7 +2,14 @@
   --primary: #f7b801;
   --secondary: #ffd100;
 }
-
+::-moz-selection {
+    background: #f7b801;
+  color: black;
+}
+::selection {
+    background: #f7b801;
+    color: black;
+}
 .container_blog {
   display: flex;
   justify-content: center;
