--- a/CSS/index.css
+++ b/CSS/index.css
@@ -10,9 +10,10 @@
     margin-bottom: 30px;
 }
 #contributor , #contributor a , #contributor a img{
-    width: 50px;
-    height: 50px;
+    width: 60px;
+    height: 60px;
     border-radius: 50%;
+    margin: 15px;
 }
 #contributor a{
     margin: 3px;
@@ -41,4 +42,8 @@
 #contributor a:hover span{
     transition: 0.5s ease;
     opacity: 1;
+}
+
+#FAQs{
+    margin-bottom: 20px;
 }
