--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1411,10 +1411,11 @@ textarea {
   margin: 5rem 0 3rem 0;
   text-align: center;
   font-weight: bold;
+  flex-wrap: wrap;
 }
 
 .socials li {
-  margin: 0 10px;
+  margin: 15px 10px;
 }
 
 .socials a {
