--- a/assets/css/swipper.css
+++ b/assets/css/swipper.css
@@ -21,6 +21,7 @@
   text-align: center;
   padding: 30px 20px;
   min-width: 270px;
+  height: 100%;
 }
 #testimonials-slider .swiper .swiper-slide .testimonial-item h2 {
   font-size: 16px;
