--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,7 +1,7 @@
 /*------- styling for the contributor section ------*/
 .contributors-holder{
-    background-color: black;
-    padding: 30px;
+    background-color: #000000;
+    padding: 32px;
     text-align: center;
 }
 .contributors-holder h3{
@@ -39,6 +39,6 @@
     box-shadow: 0px 1px 3px 5px rgba(103, 103, 103, 0.335);
 }
 #contributor a:hover span{
-    transition: 0.5s ease;
-    opacity: 1;
+    transition: 0.6s ease;
+    opacity: 0.9;
 }
