--- a/CSS/index.css
+++ b/CSS/index.css
@@ -13,6 +13,8 @@
     width: 50px;
     height: 50px;
     border-radius: 50%;
+    margin-bottom: 15px;
+    margin-left: 5px;
 }
 #contributor a{
     margin: 3px;
@@ -25,7 +27,7 @@
     left: 50%;
     padding: 5px;
     padding-top: 0;
-    padding-bottom: 0;
+    padding-bottom: 10;
     border-radius: 10px;
     font-size: 12px;
     margin-left: -50px;
@@ -36,7 +38,7 @@
 #contributor a img:hover {
     transition: 0.2s ease;
     scale: 1.05;
-    box-shadow: 0px 1px 3px 5px rgba(103, 103, 103, 0.335);
+    box-shadow: 0px 1px 8px 5px rgba(249, 247, 247, 0.335);
 }
 #contributor a:hover span{
     transition: 0.5s ease;
