--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1167,7 +1167,7 @@ hr {
   -moz-transition: all 0.3s;
   transition: all 0.3s;
   padding: 10px;
-  border: 1px solid #f1f1f1;
+  border: 1px solid rgb(134, 134, 134);
 }
 
 .form-control:focus {
