--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1865,3 +1865,25 @@ button.accordionFAQs i.slidedown.slide-top {
   margin: 0;
   padding: 0;
 }
+
+/*********  "More options" in navbar  ******************************************************/
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 250px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+  padding: 4px;
+}
+.dropdown-content a {
+  display: block;
+  margin: 10px;
+  color: #333;
+}
+.dropdown-content a:hover {
+  color: var(--primary);
+}
+.dropdown:hover .dropdown-content {
+  display: block;
+}
