--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -103,12 +103,10 @@ h1,
 h2,
 h3,
 h4 {
-  font-size: 35px;
-  padding-bottom: 1rem;
+  font-size: 38px;
   color: #222222;
-  font-weight: 500;
-  font-family: 'Roboto Mono', monospace;
-
+  font-weight: 700;
+  font-family: "Arvo", serif;
 }
 
 a {
