--- a/assets/css/contactSection.css
+++ b/assets/css/contactSection.css
@@ -2,15 +2,17 @@
   background-color: rgb(248, 245, 245);
   color: black;
   border-color: rgb(134, 134, 134);
+  border-radius: 30px;
+  padding: auto 30px;
 }
 .form-control:focus {
-  border-color: #af41a0;
+  border-color: #f7b801;
   -webkit-box-shadow: none;
   box-shadow: none;
-  box-shadow: 0 0 10px #f63955 !important;
+  box-shadow: 0 0 10px #f7b801 !important;
 }
 .contactSection {
-  background-image: url("/assets/img/one-yellow.png");
+  background-image: url("../img/one-yellow.png");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
