--- a/assets/css/100daysofcode.css
+++ b/assets/css/100daysofcode.css
@@ -26,6 +26,19 @@ td {
 th {
   color: black;
 }
+.rules-img{
+  width:100%;
+  height:100%;
+}
+#rules h4{
+  font-size: 25px;
+  line-height: 2;
+  font-family: 'Open Sans', sans-serif;
+
+}
+#rules hr{
+  border-top: 1px dashed black;
+}
 /*-------------------------------------------------------*/
 
 /* media queries for screen less than size 430px */
