FAQ's section background and text color changed

--- a/assets/css/darkmode.css
+++ b/assets/css/darkmode.css
@@ -77,6 +77,14 @@ body.dark {
   color: black;
 }
 
+.bgdark{
+  background: rgb(30, 32, 35);
+}
+
+.darkFAQ a{
+  color: #ffd100;
+}
+
 nav a.whitecr:hover {
   color: rgb(46, 48, 53);
 }
