--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -682,12 +682,26 @@ hr {
   -webkit-transition: width 1s;
 }
 
-.navbar-expand-md .navbar-nav li a:hover,
-.navbar-expand-md .navbar-nav li .active > a,
-.navbar-expand-md .navbar-nav li a:focus {
-  color: #fff;
+.navbar-expand-md .navbar-nav .nav-link:hover,
+.navbar-expand-md .navbar-nav .nav-link .active > a,
+.navbar-expand-md .navbar-nav .nav-link:focus {
+  color: var(--primary);
   outline: none;
 }
+
+/* hover effect on join us button */
+.navbar-expand-md .navbar-nav li .btn:hover,
+.navbar-expand-md .navbar-nav li .btn .active > a,
+.navbar-expand-md .navbar-nav li .btn:focus{
+  color: #fff;
+  background: var(--primary);
+  outline: none;
+  transition: .5s;
+  border: 1px dotted var(--primary);
+  box-shadow: 0 6px 22px rgb(0 0 0 / 10%);
+  -webkit-transition: all 0.2s ease-in-out;
+}
+
 
 .navbar-expand-md .navbar-nav .active > .nav-link,
 .navbar-expand-md .navbar-nav .nav-link.active,
@@ -706,6 +720,8 @@ hr {
   -webkit-transition: width 1s;
   -ms-transition: width 1s;
 }
+
+
 
 .navbar {
   padding: 10px 0;
