--- a/Privacy Policy Page/policy.css
+++ b/Privacy Policy Page/policy.css
@@ -1,44 +1,48 @@
 *{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Times New Roman', Times, serif;
-    }
-
-body{
-  background-color: #f9f9f9;
+    background-color:rgb(230, 224, 225);
+    margin-top: 0px;
+    margin-left: 0px;
+}
+.both{
+    background-color:rgb(135, 199, 231);
+    width: 100vw;
+    height:350px;
+    border-radius: 4px;
+}
+.pol{
+    display: flex;
+    padding-left: 520px;
+    background-color:rgb(135, 199, 231);
+}
+.img{
+    height: 70px;
+    width: 70px;
+    padding-left: 50px;
+    padding-top: 20px;
+    background-color:rgb(135, 199, 231);
+}
+.text{
+    padding-top: 35px;
+    padding-left: 10px;
+    background-color:rgb(135, 199, 231);
+}
+.lock{
+    display: flex;
+    padding-left: 300px;
+    background-color:rgb(135, 199, 231);
+}
+.img1{
+    height: 200px;
+    width: 200px;
+    padding-left: 50px;
+    padding-top: 30px;
+    background-color:rgb(135, 199, 231);
+}
+.text1{
+    padding-top: 90px;
+    padding-left: 30px;
+    font-size: 80px;
+    color: brown;
+    background-color:rgb(135, 199, 231);
 }
 
-h4{
-  font-weight: 600 !important;
-}
-
-.heading{
-  height: 15vh;
-  width: 78vw !important;
-  margin-top: 5px;
-  padding: 20px;
-  text-align: center;
-  font-size: 40px;
-  background-color: #f63855d5;
-  color: white;
-}
-#two{
-  border: 2px solid grey;
-  background-color:#eb586944 ;
-  padding: 10px;
-  margin-left: 25px;
-  margin-right: 25px;
-  margin-top: 0;
-}
-
- 
-@media(max-width:998px){
-  .heading{
-    font-size: 28px !important;
-    padding-top: 30px !important;
-    width: 70vw !important;
-    height: 15vh !important;
-    text-align: center;
-  }
-}
