--- a/assets/css/hacktoberfest.css
+++ b/assets/css/hacktoberfest.css
@@ -131,3 +131,10 @@
       object-fit: contain !important;
     } */
 }
+.search-box-container {
+  display: flex;
+  align-items: center;
+}
+.search-icon {
+  display: flex;
+}
