--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -54,6 +54,12 @@ left: 30px; */
 
 /* only small tablets */
 @media (min-width: 768px) and (max-width: 991px) {
+  .container{
+    margin: 0 10px;
+  }
+  .navbar-brand img{
+    display: none;
+  }
   .section-title {
     font-size: 26px;
     margin-bottom: 30px;
@@ -68,6 +74,7 @@ left: 30px; */
   .navbar-expand-md .navbar-nav .nav-link {
     margin-bottom: 0;
     margin-top: 0;
+    font-size: 80%;
   }
   #about .sec-title h3 {
     font-size: 30px;
@@ -140,6 +147,7 @@ left: 30px; */
   .navbar-expand-md .navbar-nav .nav-link {
     margin-bottom: 0;
     margin-top: 0;
+    padding: 5px 50%;
   }
   .navbar-brand img {
     margin: 5px 0;
