--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,12 +1,14 @@
 /*------- styling for the contributor section ------*/
 .contributors-holder{
-    background-color: black;
+    background-color: #800020;
     padding: 30px;
     text-align: center;
+    justify-content: center;
 }
 .contributors-holder h3{
     font-size: 22px;
-    color: white;
+    font-weight: 100;
+    color: #fff;
     margin-bottom: 30px;
 }
 #contributor , #contributor a , #contributor a img{
@@ -40,11 +42,11 @@
 #contributor a img:hover {
     transition: 0.2s ease;
     scale: 1.05;
-    box-shadow: 0px 1px 8px 5px rgba(249, 247, 247, 0.335);
+    box-shadow: 0px 3px 10px 5px rgba(249, 247, 247, 0.335);
 }
 #contributor a:hover span{
-    transition: 0.5s ease;
-    opacity: 1;
+    transition: 0.6s ease;
+    opacity: 10%;
 }
 
 
