make scrollbar rounded

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1032,6 +1032,7 @@ hr {
 /* Handle */
 ::-webkit-scrollbar-thumb {
   background: var(--primary);
+  border-radius: 8px;
 }
 
 /* Handle on hover */
