added padding to fix button placement

--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -75,7 +75,9 @@
 .blog_content:hover {
   background-color: white;
 }
-
+.description {
+    padding-bottom: 10px;
+}
 .head {
   color: black;
   font-size: 16px;
