--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -924,7 +924,7 @@ hr {
   font-weight: 500;
   line-height: 26px;
   margin-bottom: 10px;
-  color: #6306af;
+  /* color: #6306af; */
 }
 
 .media-icons {
