--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1911,6 +1911,7 @@ button.accordionFAQs i.slidedown.slide-top {
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
   padding: 4px;
+  border-radius: 10px;
 }
 .dropdown-content a {
   display: block;
@@ -1918,7 +1919,8 @@ button.accordionFAQs i.slidedown.slide-top {
   color: #333;
 }
 .dropdown-content a:hover {
-  color: var(--primary);
+  /* color: var(--primary); */
+  color: red;
 }
 .dropdown:hover .dropdown-content {
   display: block;
