--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1632,7 +1632,7 @@ textarea {
 
 /* //// Community partners //// */
 .community_partner .imgbox {
-  margin: 70px;
+  margin: 65px;
   display: flex;
   justify-content: center;
 }
@@ -1659,12 +1659,14 @@ textarea {
 
   .community_partner .imgbox {
     width: auto;
+    box-shadow: #0e0e0e;
   }
 }
 
 @media (max-width: 991px) {
   .community_partner .imgbox {
     flex-direction: column;
+    box-shadow: #0e0e0e;
   }
 
   .community_partner .img_container {
