--- a/assets/css/contactSection.css
+++ b/assets/css/contactSection.css
@@ -25,7 +25,7 @@
 
 .Cbtn {
   appearance: none;
-  background-color: transparent;
+  background-color: black;
   border: 1px solid #ffffff;
   border-radius: 35px;
   box-sizing: border-box;
@@ -53,7 +53,7 @@
 
 .Cbtn:hover {
   color: white;
-  background-color: #f7b801;
+  background-color: #ff8400;
   box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
   transform: translateY(-2px);
   border-color: #ffd100;
