back to top button and card allignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1123,6 +1123,9 @@ hr {
   min-width: 300px;
   height: 21em;
   margin: 1em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .events_box {
